--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warehouse Management System v5.0</title>
+    <title>Warehouse Management System v5.1</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
@@ -72,7 +72,7 @@
                     <i class="fas fa-warehouse mr-3 text-blue-600"></i>
                     Warehouse Management System
                 </h1>
-                <p class="text-gray-600 mt-2">Sistem Manajemen Gudang Terintegrasi - v5.0 dengan Role Access</p>
+                <p class="text-gray-600 mt-2">Sistem Manajemen Gudang Terintegrasi - v5.1 dengan Role Access & Manajemen User</p>
             </div>
             <div class="flex items-center space-x-3">
                 <div class="hidden md:block text-right">
@@ -94,6 +94,12 @@
                 <template x-if="isAdmin">
                     <button @click="exportToCSV" class="bg-gradient-to-r from-green-600 to-green-700 hover:from-green-700 hover:to-green-800 text-white font-semibold py-2 px-4 rounded-lg transition duration-200 shadow-sm hover:shadow-lg flex items-center">
                         <i class="fas fa-file-export mr-2"></i> Export CSV
+                    </button>
+                </template>
+                <!-- Tombol Manajemen User (hanya admin) -->
+                <template x-if="isAdmin">
+                    <button @click="openUserModal" class="bg-purple-100 hover:bg-purple-200 text-purple-700 font-semibold py-2 px-4 rounded-lg transition duration-200 shadow-sm hover:shadow-lg flex items-center">
+                        <i class="fas fa-users-cog mr-2"></i> Kelola User
                     </button>
                 </template>
             </div>
@@ -434,7 +440,7 @@
         <!-- Footer -->
         <footer class="mt-12 pt-8 border-t border-gray-200">
             <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-4 md:mb-0"><p class="text-gray-600"><i class="fas fa-database mr-1"></i> Warehouse Management System v5.0</p><p class="text-gray-500 text-sm mt-1">Role-based access control aktif</p></div>
+                <div class="mb-4 md:mb-0"><p class="text-gray-600"><i class="fas fa-database mr-1"></i> Warehouse Management System v5.1</p><p class="text-gray-500 text-sm mt-1">Role-based access control + Manajemen User</p></div>
                 <div class="flex space-x-4">
                     <span class="text-gray-500 text-sm"><i class="far fa-clock mr-1"></i><span x-text="new Date().toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })"></span></span>
                     <span class="text-gray-500 text-sm"><i class="fas fa-server mr-1"></i><span x-text="`${items.length} items`"></span></span>
@@ -610,8 +616,10 @@
                                 </select>
                             </div>
                             <div class="space-y-2">
-                                <label class="block text-gray-700 font-semibold text-sm">Updated By</label>
-                                <input type="text" x-model="qtyUpdateDetail.updatedBy" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Nama operator">
+                                <label class="block text-gray-700 font-semibold text-sm">Diupdate oleh</label>
+                                <div class="px-4 py-3 bg-gray-100 border border-gray-300 rounded-lg text-gray-700">
+                                    <i class="fas fa-user mr-2"></i><span x-text="user?.username"></span>
+                                </div>
                             </div>
                         </div>
                         <div class="space-y-4">
@@ -1031,6 +1039,117 @@
                     </button>
                     <button @click="showBulkLabelModal = false" class="px-5 py-3 border border-gray-300 text-gray-700 rounded-lg hover:bg-gray-50 transition duration-200">Batal</button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ========== MODAL MANAJEMEN USER (ADMIN ONLY) ========== -->
+    <div x-show="showUserModal && isAdmin" 
+         x-transition:enter="transition ease-out duration-300"
+         x-transition:enter-start="opacity-0"
+         x-transition:enter-end="opacity-100"
+         x-transition:leave="transition ease-in duration-200"
+         x-transition:leave-start="opacity-100"
+         x-transition:leave-end="opacity-0"
+         class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full z-50"
+         @click.away="closeUserModal"
+         x-cloak>
+        <div class="relative top-10 mx-auto p-4 border w-full max-w-4xl shadow-lg rounded-xl bg-white" @click.stop>
+            <div class="flex justify-between items-center pb-4 border-b">
+                <h3 class="text-xl font-bold text-gray-800">
+                    <i class="fas fa-users-cog mr-2 text-purple-600"></i>
+                    Manajemen User
+                </h3>
+                <button @click="closeUserModal" class="text-gray-500 hover:text-gray-700">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div class="py-4">
+                <!-- Form tambah user -->
+                <div class="mb-6 p-4 bg-purple-50 rounded-lg border border-purple-100">
+                    <h4 class="font-bold text-purple-800 mb-3">Tambah User Baru</h4>
+                    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+                        <div>
+                            <label class="block text-gray-700 text-sm font-semibold mb-2">Username</label>
+                            <input type="text" x-model="newUser.username" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500" placeholder="Username">
+                        </div>
+                        <div>
+                            <label class="block text-gray-700 text-sm font-semibold mb-2">Password</label>
+                            <input type="password" x-model="newUser.password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500" placeholder="Password">
+                        </div>
+                        <div>
+                            <label class="block text-gray-700 text-sm font-semibold mb-2">Role</label>
+                            <select x-model="newUser.role" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500">
+                                <option value="operator">Operator</option>
+                                <option value="admin">Admin</option>
+                            </select>
+                        </div>
+                        <div class="flex items-end">
+                            <button @click="addUser" :disabled="userLoading" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg transition disabled:opacity-50">
+                                <i class="fas fa-plus-circle mr-2" :class="{'fa-spinner spinner': userLoading}"></i>
+                                Tambah
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Daftar user -->
+                <div>
+                    <h4 class="font-bold text-gray-800 mb-3 flex items-center">
+                        <i class="fas fa-list mr-2 text-gray-600"></i> Daftar User
+                    </h4>
+                    <div class="overflow-x-auto max-h-80 border border-gray-200 rounded-lg">
+                        <table class="min-w-full divide-y divide-gray-200">
+                            <thead class="bg-gray-50 sticky top-0">
+                                <tr>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase">ID</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase">Username</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase">Role</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase">Dibuat</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-500 uppercase">Aksi</th>
+                                </tr>
+                            </thead>
+                            <tbody class="bg-white divide-y divide-gray-200">
+                                <template x-for="userItem in users" :key="userItem.id">
+                                    <tr class="hover:bg-gray-50">
+                                        <td class="px-4 py-3 text-sm text-gray-900" x-text="userItem.id"></td>
+                                        <td class="px-4 py-3 text-sm font-medium text-gray-900" x-text="userItem.username"></td>
+                                        <td class="px-4 py-3">
+                                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-semibold"
+                                                  :class="userItem.role === 'admin' ? 'bg-purple-100 text-purple-800' : 'bg-green-100 text-green-800'"
+                                                  x-text="userItem.role"></span>
+                                        </td>
+                                        <td class="px-4 py-3 text-sm text-gray-700" x-text="new Date(userItem.createdAt).toLocaleDateString('id-ID')"></td>
+                                        <td class="px-4 py-3 text-sm">
+                                            <button @click="deleteUser(userItem.id, userItem.username)" 
+                                                    :disabled="userItem.id === user?.id"
+                                                    class="text-red-600 hover:text-red-800 disabled:opacity-50 disabled:cursor-not-allowed"
+                                                    :title="userItem.id === user?.id ? 'Tidak dapat menghapus diri sendiri' : 'Hapus user'">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                </template>
+                                <tr x-show="users.length === 0 && !userLoading">
+                                    <td colspan="5" class="px-4 py-8 text-center text-gray-500">
+                                        <i class="fas fa-user-slash text-3xl mb-2"></i>
+                                        <p>Belum ada user</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div x-show="userLoading" class="text-center py-4">
+                        <div class="inline-flex items-center">
+                            <div class="animate-spin rounded-full h-5 w-5 border-t-2 border-b-2 border-purple-600 mr-2"></div>
+                            Memuat data...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pt-6 border-t border-gray-200 flex justify-end">
+                <button @click="closeUserModal" class="px-5 py-2 border border-gray-300 text-gray-700 rounded-lg hover:bg-gray-50 transition duration-200">
+                    Tutup
+                </button>
             </div>
         </div>
     </div>
