--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                 <div class="bg-gradient-to-br from-blue-600 to-indigo-600 w-20 h-20 rounded-2xl shadow-lg shadow-blue-200 flex items-center justify-center mx-auto mb-4">
                     <i class="fas fa-warehouse text-white text-4xl"></i>
                 </div>
-                <h2 class="text-2xl font-bold text-slate-800">Warehouse v5.1</h2>
+                <h2 class="text-2xl font-bold text-slate-800">WMS</h2>
                 <p class="text-slate-500 mt-1">Silakan login untuk melanjutkan</p>
             </div>
             <form @submit.prevent="login" class="space-y-5">
@@ -108,9 +108,9 @@
                 </div>
                 <div>
                     <h1 class="text-xl md:text-2xl font-bold text-slate-800 tracking-tight">
-                        Warehouse<span class="text-blue-600">.v5.1</span>
+                        WMS
                     </h1>
-                    <p class="text-xs text-slate-500">Manajemen Gudang • Role Access</p>
+                    <p class="text-xs text-slate-500">Warehouse Management System</p>
                 </div>
             </div>
             <div class="flex flex-wrap items-center gap-3 w-full md:w-auto">
@@ -251,66 +251,46 @@
                 </div>
 
                 <!-- CARD STATISTIK GUDANG (SEMUA ROLE) -->
-                <div class="bg-white/90 backdrop-blur-sm rounded-2xl shadow-lg border border-slate-200/60 p-5 fade-in">
-                    <div class="flex items-center gap-3 border-b border-slate-100 pb-3 mb-4">
-                        <div class="bg-emerald-100 p-2 rounded-lg">
-                            <i class="fas fa-chart-pie text-emerald-700"></i>
-                        </div>
-                        <h2 class="font-bold text-slate-800 text-lg">Statistik</h2>
-                    </div>
-                    <div class="grid grid-cols-2 gap-3">
-                        <div class="bg-slate-50 p-3 rounded-xl border border-slate-100">
-                            <div class="flex items-center gap-2">
-                                <div class="bg-blue-100 p-2 rounded-lg"><i class="fas fa-boxes text-blue-700"></i></div>
-                                <div>
-                                    <p class="text-xs text-slate-500">Total Item</p>
-                                    <p class="text-xl font-bold text-slate-800" x-text="stats.totalItems || items.length"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-slate-50 p-3 rounded-xl border border-slate-100">
-                            <div class="flex items-center gap-2">
-                                <div class="bg-green-100 p-2 rounded-lg"><i class="fas fa-box-open text-green-700"></i></div>
-                                <div>
-                                    <p class="text-xs text-slate-500">Total Qty</p>
-                                    <p class="text-xl font-bold text-slate-800" x-text="formatNumber(totalQty)"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-slate-50 p-3 rounded-xl border border-slate-100">
-                            <div class="flex items-center gap-2">
-                                <div class="bg-amber-100 p-2 rounded-lg"><i class="fas fa-clipboard-list text-amber-700"></i></div>
-                                <div>
-                                    <p class="text-xs text-slate-500">Total Order</p>
-                                    <p class="text-xl font-bold text-slate-800" x-text="formatNumber(totalOrder)"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bg-slate-50 p-3 rounded-xl border border-slate-100">
-                            <div class="flex items-center gap-2">
-                                <div class="bg-red-100 p-2 rounded-lg"><i class="fas fa-exclamation-triangle text-red-700"></i></div>
-                                <div>
-                                    <p class="text-xs text-slate-500">Stok Rendah</p>
-                                    <p class="text-xl font-bold text-red-600" x-text="lowStockCount"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-4 pt-4 border-t border-slate-100">
-                        <div class="flex items-center justify-between bg-purple-50 p-3 rounded-xl">
-                            <div class="flex items-center gap-2">
-                                <div class="bg-purple-100 p-2 rounded-lg"><i class="fas fa-qrcode text-purple-700"></i></div>
-                                <div>
-                                    <p class="text-xs text-slate-500">QR Scan Hari Ini</p>
-                                    <p class="text-lg font-bold text-purple-800" x-text="todayScanCount"></p>
-                                </div>
-                            </div>
-                            <button @click="openScanLogs" class="text-xs text-purple-700 hover:text-purple-900 bg-purple-100 px-3 py-1.5 rounded-lg">
-                                <i class="fas fa-history mr-1"></i> Logs
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                <!-- Statistik dengan layout vertikal yang rapi -->
+<div class="grid grid-cols-2 gap-4">
+    <!-- Total Item -->
+    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+        <div class="bg-blue-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+            <i class="fas fa-boxes text-blue-700 text-lg"></i>
+        </div>
+        <p class="text-xs font-medium text-slate-500">Total Item</p>
+        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="stats.totalItems || items.length"></p>
+    </div>
+
+    <!-- Total Qty -->
+    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+        <div class="bg-green-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+            <i class="fas fa-box-open text-green-700 text-lg"></i>
+        </div>
+        <p class="text-xs font-medium text-slate-500">Total Qty</p>
+        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalQty)"></p>
+    </div>
+
+    <!-- Total Order -->
+    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+        <div class="bg-amber-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+            <i class="fas fa-clipboard-list text-amber-700 text-lg"></i>
+        </div>
+        <p class="text-xs font-medium text-slate-500">Total Order</p>
+        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalOrder)"></p>
+    </div>
+
+    <!-- Stok Rendah -->
+    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+        <div class="bg-red-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+            <i class="fas fa-exclamation-triangle text-red-700 text-lg"></i>
+        </div>
+        <p class="text-xs font-medium text-slate-500">Stok Rendah</p>
+        <p class="text-xl font-bold text-red-600 leading-tight" x-text="lowStockCount"></p>
+    </div>
+</div>
+
+
             </div>
 
             <!-- ===== KANAN (9/12) ===== -->
@@ -551,9 +531,9 @@
         <footer class="mt-8 pt-6 border-t border-slate-200 flex flex-col md:flex-row justify-between items-center text-xs text-slate-500">
             <div class="flex items-center gap-2">
                 <i class="fas fa-warehouse text-slate-400"></i>
-                <span>Warehouse Management System v5.1</span>
+                <span>Warehouse Management System </span>
                 <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
-                <span>Role Access + User Management</span>
+               
             </div>
             <div class="flex gap-4 mt-2 md:mt-0">
                 <span><i class="far fa-calendar mr-1"></i><span x-text="new Date().toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })"></span></span>
