--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,11 @@
         /* Glass effect untuk card */
         .glass-card { background: rgba(255,255,255,0.7); backdrop-filter: blur(8px); border: 1px solid rgba(255,255,255,0.3); }
         .dark-glass { background: rgba(15,23,42,0.75); backdrop-filter: blur(8px); }
+
+        /* Tambahan untuk aspek rasio video */
+        .aspect-video {
+            aspect-ratio: 16 / 9;
+        }
     </style>
 </head>
 <body class="bg-gradient-to-br from-slate-50 via-white to-slate-50/70 antialiased min-h-screen" 
@@ -91,9 +96,9 @@
                     <span x-text="loginLoading ? 'Logging in...' : 'Masuk ke Dashboard'"></span>
                 </button>
             </form>
-            <div class="mt-6 text-xs text-slate-400 text-center border-t border-slate-100 pt-4">
+            <!-- <div class="mt-6 text-xs text-slate-400 text-center border-t border-slate-100 pt-4">
                 <p>Default: admin/admin | operator/operator</p>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -251,45 +256,43 @@
                 </div>
 
                 <!-- CARD STATISTIK GUDANG (SEMUA ROLE) -->
-                <!-- Statistik dengan layout vertikal yang rapi -->
-<div class="grid grid-cols-2 gap-4">
-    <!-- Total Item -->
-    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
-        <div class="bg-blue-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
-            <i class="fas fa-boxes text-blue-700 text-lg"></i>
-        </div>
-        <p class="text-xs font-medium text-slate-500">Total Item</p>
-        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="stats.totalItems || items.length"></p>
-    </div>
+                <div class="grid grid-cols-2 gap-4">
+                    <!-- Total Item -->
+                    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+                        <div class="bg-blue-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+                            <i class="fas fa-boxes text-blue-700 text-lg"></i>
+                        </div>
+                        <p class="text-xs font-medium text-slate-500">Total Item</p>
+                        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="stats.totalItems || items.length"></p>
+                    </div>
 
-    <!-- Total Qty -->
-    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
-        <div class="bg-green-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
-            <i class="fas fa-box-open text-green-700 text-lg"></i>
-        </div>
-        <p class="text-xs font-medium text-slate-500">Total Qty</p>
-        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalQty)"></p>
-    </div>
+                    <!-- Total Qty -->
+                    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+                        <div class="bg-green-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+                            <i class="fas fa-box-open text-green-700 text-lg"></i>
+                        </div>
+                        <p class="text-xs font-medium text-slate-500">Total Qty</p>
+                        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalQty)"></p>
+                    </div>
 
-    <!-- Total Order -->
-    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
-        <div class="bg-amber-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
-            <i class="fas fa-clipboard-list text-amber-700 text-lg"></i>
-        </div>
-        <p class="text-xs font-medium text-slate-500">Total Order</p>
-        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalOrder)"></p>
-    </div>
+                    <!-- Total Order -->
+                    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+                        <div class="bg-amber-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+                            <i class="fas fa-clipboard-list text-amber-700 text-lg"></i>
+                        </div>
+                        <p class="text-xs font-medium text-slate-500">Total Order</p>
+                        <p class="text-xl font-bold text-slate-800 leading-tight" x-text="formatNumber(totalOrder)"></p>
+                    </div>
 
-    <!-- Stok Rendah -->
-    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
-        <div class="bg-red-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
-            <i class="fas fa-exclamation-triangle text-red-700 text-lg"></i>
-        </div>
-        <p class="text-xs font-medium text-slate-500">Stok Rendah</p>
-        <p class="text-xl font-bold text-red-600 leading-tight" x-text="lowStockCount"></p>
-    </div>
-</div>
-
+                    <!-- Stok Rendah -->
+                    <div class="bg-slate-50 p-4 rounded-xl border border-slate-100 flex flex-col items-center text-center">
+                        <div class="bg-red-100 w-10 h-10 rounded-lg flex items-center justify-center mb-2">
+                            <i class="fas fa-exclamation-triangle text-red-700 text-lg"></i>
+                        </div>
+                        <p class="text-xs font-medium text-slate-500">Stok Rendah</p>
+                        <p class="text-xl font-bold text-red-600 leading-tight" x-text="lowStockCount"></p>
+                    </div>
+                </div>
 
             </div>
 
@@ -544,7 +547,7 @@
     </div>
 
     <!-- ========== MODAL-MODAL ========== -->
-    <!-- QR SCANNER MODAL (ELEGAN) -->
+    <!-- QR SCANNER MODAL (ELEGAN) DENGAN PERBAIKAN MOBILE -->
     <div x-show="showQRScanModal" 
          x-transition:enter="transition ease-out duration-300"
          x-transition:enter-start="opacity-0 scale-90"
@@ -556,7 +559,7 @@
          @click.away="closeQRScanModal"
          x-cloak>
         <div class="bg-white rounded-3xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto" @click.stop>
-            <div class="sticky top-0 bg-white/80 backdrop-blur-sm flex justify-between items-center p-6 border-b border-slate-100 rounded-t-3xl">
+            <div class="sticky top-0 bg-white/80 backdrop-blur-sm flex justify-between items-center p-4 sm:p-6 border-b border-slate-100 rounded-t-3xl">
                 <h3 class="text-xl font-bold text-slate-800 flex items-center gap-2">
                     <i class="fas fa-qrcode text-indigo-600"></i> QR Code Scanner
                 </h3>
@@ -564,35 +567,36 @@
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <div class="p-6 space-y-5">
-                <!-- Mode Picker -->
-                <div class="flex gap-2 bg-slate-100 p-1 rounded-xl">
-                    <button @click="qrScanMode = 'camera'" :class="qrScanMode === 'camera' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium">
+            <div class="p-4 sm:p-6 space-y-5">
+                <!-- Mode Picker dengan scroll horizontal di mobile -->
+                <div class="flex gap-2 bg-slate-100 p-1 rounded-xl overflow-x-auto flex-nowrap">
+                    <button @click="qrScanMode = 'camera'" :class="qrScanMode === 'camera' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium whitespace-nowrap">
                         <i class="fas fa-camera"></i> Camera
                     </button>
-                    <button @click="qrScanMode = 'upload'" :class="qrScanMode === 'upload' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium">
+                    <button @click="qrScanMode = 'upload'" :class="qrScanMode === 'upload' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium whitespace-nowrap">
                         <i class="fas fa-upload"></i> Upload
                     </button>
-                    <button @click="qrScanMode = 'manual'" :class="qrScanMode === 'manual' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium">
+                    <button @click="qrScanMode = 'manual'" :class="qrScanMode === 'manual' ? 'bg-white shadow-md text-indigo-700' : 'text-slate-600'" class="flex-1 py-2.5 px-3 rounded-lg transition flex items-center justify-center gap-2 text-sm font-medium whitespace-nowrap">
                         <i class="fas fa-keyboard"></i> Manual
                     </button>
                 </div>
 
-                <!-- Camera -->
+                <!-- Camera dengan aspect ratio -->
                 <div x-show="qrScanMode === 'camera'" class="space-y-4">
                     <div class="qr-frame border-2 border-slate-200 rounded-2xl overflow-hidden bg-slate-900/5">
-                        <video id="qr-video" class="w-full h-64 object-cover" playsinline></video>
+                        <video id="qr-video" class="w-full aspect-video object-cover" playsinline></video>
                         <canvas id="qr-canvas" class="hidden"></canvas>
                         <div x-show="!cameraAvailable" class="absolute inset-0 flex flex-col items-center justify-center bg-slate-100/80">
                             <i class="fas fa-camera-slash text-4xl text-slate-400 mb-2"></i>
                             <p class="text-slate-600">Kamera tidak tersedia</p>
                         </div>
                     </div>
-                    <div class="flex justify-center gap-3">
-                        <button @click="startCameraScan" :disabled="cameraScanning" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2.5 px-6 rounded-xl shadow-md flex items-center gap-2">
+                    <!-- Tombol kamera vertikal di mobile, horizontal di desktop -->
+                    <div class="flex flex-col sm:flex-row justify-center gap-3">
+                        <button @click="startCameraScan" :disabled="cameraScanning" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2.5 px-6 rounded-xl shadow-md flex items-center justify-center gap-2 w-full sm:w-auto">
                             <i class="fas fa-play" :class="{'fa-spinner fa-spin': cameraScanning}"></i> Mulai Kamera
                         </button>
-                        <button @click="stopCameraScan" class="bg-slate-600 hover:bg-slate-700 text-white font-medium py-2.5 px-6 rounded-xl flex items-center gap-2">
+                        <button @click="stopCameraScan" class="bg-slate-600 hover:bg-slate-700 text-white font-medium py-2.5 px-6 rounded-xl flex items-center justify-center gap-2 w-full sm:w-auto">
                             <i class="fas fa-stop"></i> Stop
                         </button>
                     </div>
@@ -657,7 +661,7 @@
                     </button>
                 </div>
             </div>
-            <div class="p-6 border-t border-slate-100 flex justify-end">
+            <div class="p-4 sm:p-6 border-t border-slate-100 flex justify-end">
                 <button @click="closeQRScanModal" class="px-6 py-2.5 border border-slate-300 text-slate-700 rounded-xl hover:bg-slate-50 transition">
                     Tutup
                 </button>
@@ -684,7 +688,6 @@
                     <p class="font-semibold text-slate-800" x-text="selectedItemForQtyUpdate?.article"></p>
                     <div class="flex justify-between mt-2 text-sm">
                         <span>Stok Saat Ini: <span class="font-bold text-lg" x-text="selectedItemForQtyUpdate?.qty"></span></span>
-                        <!-- <span>Min Stock: <span x-text="selectedItemForQtyUpdate?.minStock"></span></span> -->
                         <span>Komponen: <span x-text="selectedItemForQtyUpdate?.komponen || '-'"></span></span>
    
                     </div>
