--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,6 @@
                     <span x-text="loginLoading ? 'Logging in...' : 'Masuk ke Dashboard'"></span>
                 </button>
             </form>
-            <!-- <div class="mt-6 text-xs text-slate-400 text-center border-t border-slate-100 pt-4">
-                <p>Default: admin/admin | operator/operator</p>
-            </div> -->
         </div>
     </div>
 
@@ -130,7 +127,7 @@
                     <i class="fas fa-qrcode"></i> <span class="hidden sm:inline">Scan QR</span>
                 </button>
                 <template x-if="isAdmin">
-                    <button @click="exportToCSV" class="bg-white border border-slate-200 hover:bg-slate-50 text-slate-700 font-medium py-2 px-4 rounded-xl shadow-sm flex items-center gap-2 text-sm">
+                    <button @click="exportToExcel" class="bg-white border border-slate-200 hover:bg-slate-50 text-slate-700 font-medium py-2 px-4 rounded-xl shadow-sm flex items-center gap-2 text-sm">
                         <i class="fas fa-file-export text-green-600"></i> <span class="hidden sm:inline">Export</span>
                     </button>
                 </template>
