Fix input No PO

--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,11 @@
                                 <label class="block text-slate-600 font-medium text-xs uppercase tracking-wider mb-1">Article <span class="text-red-500">*</span></label>
                                 <input type="text" x-model="currentItem.article" class="w-full px-4 py-2.5 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500/30 focus:border-blue-500 transition" required>
                             </div>
+                            <!-- Tambahkan input untuk No. PO di sini -->
+<div>
+    <label class="block text-slate-600 font-medium text-xs uppercase tracking-wider mb-1">No. PO</label>
+    <input type="text" x-model="currentItem.noPo" class="w-full px-4 py-2.5 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500/30" >
+</div>
                             <div>
                                 <label class="block text-slate-600 font-medium text-xs uppercase tracking-wider mb-1">Komponen <span class="text-red-500">*</span></label>
                                 <input type="text" x-model="currentItem.komponen" class="w-full px-4 py-2.5 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500/30 focus:border-blue-500 transition" required>
