--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,28 @@
                                 </select>
                             </div>
                         </div>
+
+                                <div class="grid grid-cols-2 gap-3">
+                            <div>
+                                <label class="block text-slate-600 text-sm font-medium mb-1.5">Kategori</label>
+                                  <select x-model="filter.categoryId" @change="applyFilter" class="w-full px-3 py-2.5 border border-slate-200 rounded-xl focus:ring-2 focus:ring-indigo-500/30 bg-white">
+                                <option value="">Semua</option>
+                                <template x-for="cat in categories" :key="cat.id">
+                                    <option :value="cat.id" x-text="cat.name"></option>
+                                </template>
+                            </select>
+                            </div>
+                            <div>
+                                <label class="block text-slate-600 text-sm font-medium mb-1.5">Status Stok</label>
+                                   <select x-model="filter.stockStatus" @change="applyFilter" class="w-full px-3 py-2.5 border border-slate-200 rounded-xl focus:ring-2 focus:ring-indigo-500/30 bg-white">
+                                <option value="">Semua</option>
+                                <option value="low">Stok Rendah (≤ Min)</option>
+                                <option value="medium">Stok Sedang (Min – 2xMin)</option>
+                                <option value="safe">Stok Aman (> 2xMin)</option>
+                            </select>
+                            </div>
+                        </div>
+
                         <div class="flex gap-2">
                             <button @click="applyFilter" class="flex-1 bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-2.5 px-4 rounded-xl shadow-sm transition text-sm">
                                 <i class="fas fa-filter mr-2"></i>Terapkan
