--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5">
-    <title>Warehouse Management System v5.2 – Pro Edition</title>
+    <title>Warehouse Management System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
@@ -508,9 +508,8 @@
         <footer class="mt-8 pt-6 border-t border-slate-200 flex flex-col md:flex-row justify-between items-center text-xs text-slate-500">
             <div class="flex items-center gap-2">
                 <i class="fas fa-warehouse text-slate-400"></i>
-                <span>Warehouse Management System v5.2</span>
-                <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
-                <span>Staff role enabled</span>
+                <span>Warehouse Management System</span>
+               
             </div>
             <div class="flex gap-4 mt-2 md:mt-0">
                 <span><i class="far fa-calendar mr-1"></i><span x-text="new Date().toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })"></span></span>
