--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
                 <!-- TOMBOL IMPORT EXCEL (HANYA ADMIN) -->
                 <template x-if="isAdmin">
                     <button @click="importExcel" class="bg-white border border-slate-200 hover:bg-slate-50 text-slate-700 font-medium py-2 px-4 rounded-xl shadow-sm flex items-center gap-2 text-sm">
-                        <i class="fas fa-file-import text-green-600"></i> <span class="hidden sm:inline">Import Excel</span>
+                        <i class="fas fa-file-import text-green-600"></i> <span class="hidden sm:inline">Import</span>
                     </button>
                 </template>
                 <template x-if="isAdmin">
