--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                 </button>
                 <template x-if="canManageItems">
                     <button @click="openAddItemModal" class="bg-white border border-slate-200 hover:bg-slate-50 text-slate-700 font-medium py-2 px-4 rounded-xl shadow-sm flex items-center gap-2 text-sm">
-                        <i class="fas fa-plus-circle text-blue-600"></i> <span class="hidden sm:inline">Tambah Item</span>
+                        <i class="fas fa-plus-circle text-blue-600"></i> <span class="hidden sm:inline">Item</span>
                     </button>
                 </template>
                 <template x-if="canManageItems">
@@ -153,7 +153,7 @@
                     </button>
                 </template>
                 <button @click="logout" class="bg-red-50 hover:bg-red-100 text-red-700 font-medium py-2 px-4 rounded-xl border border-red-200 flex items-center gap-2 text-sm">
-                    <i class="fas fa-sign-out-alt"></i> <span class="hidden sm:inline">Logout</span>
+                    <i class="fas fa-sign-out-alt"></i> 
                 </button>
             </div>
         </header>
